Fix spacing

--- a/src/app/alveo/loading-spinner/loading-spinner.component.css
+++ b/src/app/alveo/loading-spinner/loading-spinner.component.css
@@ -6,6 +6,6 @@
   align-items: center;
 }
 
-p {
-  margin-top: 1em;
+.mat-spinner {
+  margin-bottom: 1.5em;
 }
